--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Matemasie&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Matemasie&family=Playwrite+AR:wght@100..400&family=Poetsen+One&display=swap" rel="stylesheet">
     <link rel="icon" href="images/heart_icon.png">
 </head>
 <body>
