--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Optional Gallery Section -->
     <section id="gallery">
       <div class="gallery-wrapper">
-          <img src="images/toronto.jpg" alt="Toronto" title="Toronto">
+          <img src="images/toronto.JPG" alt="Toronto" title="Toronto">
           <img src="images/andalusia.jpg" alt="Spain" title="Spain">
           <img src="images/mont_tremblant.jpg" alt="Mont Tremblant" title="Mont Tremblant">
           <img src="images/niagara.jpg" alt="Niagara" title="Niagara">
@@ -101,7 +101,7 @@
           <img src="images/dominican_republic.jpg" alt="Dominican Republic" title="Dominican Republic">
           <img src="images/lulu.jpg" alt="Lulu" title="Lulu">
           <!-- Repeat images to create a seamless scroll -->
-          <img src="images/toronto.jpg" alt="Toronto" title="Toronto">
+          <img src="images/toronto.JPG" alt="Toronto" title="Toronto">
           <img src="images/andalusia.jpg" alt="Spain" title="Spain">
           <img src="images/mont_tremblant.jpg" alt="Mont Tremblant" title="Mont Tremblant">
           <img src="images/niagara.jpg" alt="Niagara" title="Niagara">
